filter add to past and upcoming events. making det

--- a/templates/details.html
+++ b/templates/details.html
@@ -53,23 +53,8 @@
         </div>
     </nav>
 
-    <div class="container text-center mt-5 border p-5">
-        <div class="row row-cols-2">
-          <div class="col-6">
-            <img src="/assets/img/Cine7.jpg" class="img-fluid container-sm" >
-          </div>
-          <div class="col-lg-6">
-            <h1>Into the Spider-verse</h1>
-            <h3>Movie Night</h3>
-            <p>Come to join us to watch "Spiderman: No Way Home" in our personal Cinema! The ticket price includes: 1 super-confort seat to watch the movie, 1 small popcorn and 1 small soda.
-            </p>
-
-            <p> <span class="text-muted">Synopsis:</span>
-                With Spider-Man's indentity now revealed, our friendly neighborhood web-slinger is unmasked and no longer able to separate his normal life as Peter Parker
-                from the high stakes of being a superhero. When Peter asks for help from Doctor Strange, the stakes become even more dangerous, forcing him to discover what it truly means to be Spider-Man.
-            </p>
-            </div>
-        </div>
+    <div class="container text-center mt-5 border p-5" id="container-detail">
+        
       </div>
 
       <footer class="footer-basic container mt-3">
@@ -93,6 +78,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+    <script src="../dataHome.js"></script>
 </body>
 
 
