--- a/templates/past-e.html
+++ b/templates/past-e.html
@@ -59,35 +59,8 @@
         </div>
     </header>
 
-    <div class="d-flex p-3 ms-5 gap-5">
-        <div class="form-switch form-check-inline">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" value="option1">
-            <label class="form-check-label" for="flexSwitchCheckDefault">Category</label>
-        </div>
-        <div class="form-switch form-check-inline">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" value="option1">
-            <label class="form-check-label" for="flexSwitchCheckDefault">Category</label>
-        </div>
-        <div class="form-switch form-check-inline">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" value="option1">
-            <label class="form-check-label" for="flexSwitchCheckDefault">Category</label>
-        </div>
-        <div class="form-switch form-check-inline">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" value="option1">
-            <label class="form-check-label" for="flexSwitchCheckDefault">Category</label>
-        </div>
-        <div class="form-switch form-check-inline">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" value="option1">
-            <label class="form-check-label" for="flexSwitchCheckDefault">Category</label>
-        </div>
-
-        <div class="input-group mb-2 w-25 container">
-            <input type="text" class="form-control" placeholder="Search your favorite event"
-                aria-label="Recipient's username" aria-describedby="basic-addon2">
-            <div class="input-group-append">
-                <button class="btn btn-dark " type="button">Search</button>
-            </div>
-        </div>
+    <div class="d-flex p-3 ms-5 gap-5"  id="table_checks">
+        
     </div>
 
     <div id="div-cards-events" class="row row-cols-1 row-cols-md-4 g-4 m-5">
