finish details page

--- a/templates/past-e.html
+++ b/templates/past-e.html
@@ -77,11 +77,11 @@
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
         </div>
         <ul class="list-inline">
-            <li class="list-inline-item"><a href="/index.html">Home</a></li>
-            <li class="list-inline-item"><a href="/templates/upcoming-ev.html">Upcoming Events</a></li>
-            <li class="list-inline-item"><a href="/templates/past-e.html">Past Events</a></li>
-            <li class="list-inline-item"><a href="/templates/contact.html">Contact</a></li>
-            <li class="list-inline-item"><a href="/templates/stats.html">Stats</a></li>
+            <li class="list-inline-item"><a href="./index.html">Home</a></li>
+            <li class="list-inline-item"><a href="./templates/upcoming-ev.html">Upcoming Events</a></li>
+            <li class="list-inline-item"><a href="./templates/past-e.html">Past Events</a></li>
+            <li class="list-inline-item"><a href="./templates/contact.html">Contact</a></li>
+            <li class="list-inline-item"><a href="./templates/stats.html">Stats</a></li>
         </ul>
         <p class="copyright">Karen A. Lettieri | Front-end Dev. © 2023</p>
     </footer>
@@ -91,7 +91,9 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 
-    <script src="/dataEvents.js"> </script>
+    <script src="../details.js"> </script>
+    <script src="../dataEvents.js"> </script>
+
 </body>
 
 
